--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
     <div class="header">
         <header>Rock Paper Scissors</header>
-        <p>The first one to get to 5 points Wins</p>
+        <p>The First One to get to 5 points Wins</p>
     </div>
     <div class="startgame">
         <button  id="start" >START</button>
@@ -33,10 +33,10 @@
         </div>
         <div  class="computer-btn">
             <h2>Computer</h2>
-                <img  id="rock" class="button" src="rock.jpeg">
-                <img  id="paper" class="button" src="paper.png">
+                <img  id="c-rock" class="button" src="rock.jpeg">
+                <img  id="c-paper" class="button" src="paper.png">
             <ul>
-                <img  id="scissor" class="button" src="scissor.png">
+                <img  id="c-scissor" class="button" src="scissor.png">
             </ul>
         </div>
     </div>
